# q-research

./: .gitignore  README.md  _quarto.yml  pyproject.toml
.cursor/rules/: massive-api-data.mdc  research-notebooks.mdc
.github/workflows/: publish.yml
_freeze/notebooks/examples/liquidation-clusters/execute-results/: html.json
notebooks/: index.qmd  template.py
notebooks/examples/: btc-qqq-residual-upro-backtest.py  liquidation-clusters.py  live-qqq-btc-price-data.py  spy-tlt-eom-rebalance-flow.py  spy-tlt-short-term-reversal.py  spy-tlt-signal-portfolio-vol-target.py  tlt-turn-of-month-effect.py
research/: __init__.py  data.py  flatfile_cache.py  massive_flatfiles.py  massive_rest.py  plotting.py  stats.py  upro_residual.py
scripts/: convert_notebooks.py  verify_massive_data.py
